# creusot-ide

./: .gitignore  .vscodeignore  README.md  creusot-lsp.opam  creusot-lsp.opam.locked  dune  dune-project  flake.nix  package-lock.json  package.json  why3find.patch
.github/workflows/: ci.yml  release.yml
server/: dune  dune-project
server/lib/: cargo.ml  cargo.mli  creusot_demangler.mll  creusot_lsp.ml  creusot_lsp.mli  creusot_manager.ml  creusot_manager.mli  debug.ml  dune  hacky_coma_parser.mll  hacky_rs_parser.mll  json_visitor.mli  json_visitor.mll  log.ml  proof_json_parser.mll  rust_parser.mly  rust_parser_extra.ml  rust_syntax.ml  rust_syntax.mli  rust_syntax_types.ml  test_api.ml  test_api.mli  tests.ml  types.mli  util.ml  util.mli  why3find.ml  why3find.mli  why3findUtil.ml  why3findUtil.mli  why3session.ml  why3session.mli
server/test/: creusot_test.ml  dune  main.ml  why3findtest.ml
server/testdata/: sum.coma  why3find.json
server/testdata/prelude/: prelude.coma
server/testdata/sum/: proof.json
vscode/: package-lock.json  package.json
vscode/languages/: coma.json
vscode/src/: extension.ts
vscode/syntaxes/: coma.json  creusot-rust.json  pearlite-rust.json  pearlite.json
