(library
 (name creusot_lsp)
 (public_name creusot-lsp)
 (libraries
  dune-build-info
  linol
  linol-lwt
  lwt
  lsp
  why3
  why3find
  uri
  toml
  yojson
  jsonm
  lwt.unix
  ppx_deriving
  xmlm)
 (inline_tests)
 (preprocess
  (pps ppx_deriving.show ppx_expect))
 (modules_without_implementation types))
(ocamllex
 hacky_coma_parser
 hacky_rs_parser
 json_visitor
 creusot_demangler)
(menhir
 (modules rust_parser))
