(library
 (name creusot_lsp)
 (public_name creusot-lsp)
 (libraries
  dune-build-info
  linol
  linol-lwt
  lwt
  lsp
  why3
  why3find
  uri
  toml
  yojson
  jsonm
  lwt.unix
  ppx_deriving
  ppx_yojson_conv
  ppx_yojson_conv_lib
  xmlm)
 (inline_tests)
 (preprocess
  (pps ppx_deriving.show ppx_expect ppx_yojson_conv))
 (modules_without_implementation types))

(ocamllex hacky_coma_parser hacky_rs_parser creusot_demangler)

(menhir
 (modules rust_parser))
